[fix] error handler cannot terminate properly